--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cmake-imgui-implot/lib/imgui"]
 	path = cmake-imgui-implot/lib/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "cmake-imgui-implot/lib/implot"]
+	path = cmake-imgui-implot/lib/implot
+	url = https://github.com/epezent/implot.git
