OpenGL and win32 working

--- a/cmake-imgui-implot/lib/CMakeLists.txt
+++ b/cmake-imgui-implot/lib/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required (VERSION 3.8)
 
-
-###############################################################################
-# IMGUI
-###############################################################################
-
+# setup imgui library
 set(IMGUI_HEADERS
     ./imgui/imconfig.h
     ./imgui/imgui_internal.h
@@ -12,14 +8,11 @@ set(IMGUI_HEADERS
     ./imgui/imstb_rectpack.h
     ./imgui/imstb_textedit.h
     ./imgui/imstb_truetype.h    
-    ./imgui/backends/imgui_impl_glfw.h
+    ./imgui/backends/imgui_impl_win32.h
     ./imgui/backends/imgui_impl_opengl3.h
     ./imgui/backends/imgui_impl_opengl3_loader.h
     ./imgui/misc/cpp/imgui_stdlib.h
 )
-
-#message(PROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}/lib)
-#message(IMGUI_HEADERS=${IMGUI_HEADERS})
 
 set(IMGUI_SRC
     ./imgui/imgui_demo.cpp
@@ -27,8 +20,16 @@ set(IMGUI_SRC
     ./imgui/imgui_tables.cpp
     ./imgui/imgui_widgets.cpp
     ./imgui/imgui.cpp
-    ./imgui/backends/imgui_impl_glfw.cpp
+    ./imgui/backends/imgui_impl_win32.cpp
     ./imgui/backends/imgui_impl_opengl3.cpp
     ./imgui/misc/cpp/imgui_stdlib.cpp
 )
 
+find_package(OpenGL REQUIRED)
+
+add_library(imgui ${IMGUI_HEADERS} ${IMGUI_SRC})
+
+target_link_libraries(imgui PUBLIC OpenGL::GL)
+target_compile_definitions(imgui PRIVATE IMGUI_DLL_EXPORT)
+
+include_directories(./imgui/ ./imgui/examples ./imgui/examples/libs/gl3w ./imgui/backends ./imgui/misc/cpp)
